--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
     // Other Firebase/Play services deps
     implementation 'com.google.firebase:firebase-auth:16.0.3'
+    implementation 'com.google.firebase:firebase-core:16.0.3'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
 
     // FirebaseUI (for authentication)
