--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId 'com.google.firebase.example.fireeats'
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
         versionName '1.0'
@@ -27,6 +27,7 @@ dependencies {
 
     // Other Firebase/Play services deps
     implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
     // FirebaseUI (for authentication)
@@ -52,7 +53,7 @@ dependencies {
 
     // Third-party libraries
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
